@@ -1,3 +1,9 @@
+2015-01-17  Titus Brown  <titus@idyll.org>
+
+   * sandbox/correct-errors.py: fixed sequence output so that quality
+   scores length always matches the sequence length; fixed argparse
+   setup to make use of default parameter.
+
 2015-01-14  Reed Cartwright  <cartwright@asu.edu>
 
     * doc/dev/getting-started.txt: Added install information for
